# agentic-ecosystem-lab

./: .gitignore  PROJECT-STRUCTURE.md  PROJECT-STRUCTURE.txt  README.md  STATUS-FINAL.md  STATUS.md
apps/memory/: README.md
collaboration/: README.md  symbiotic-collaboration-charter.json
collaboration/audit/: framework-audit-v1.0.js
collaboration/decisions/: 2025-06-06-n8n-mcp-calendar.md  README.md
collaboration/documentation/: README.md
collaboration/evolution/: README.md
collaboration/session-briefs/: README.md  session-01-userpreferences-audit.md  session-02-charter-simplification.md  session-02-project-management.md  session-02bis-project-management.md  session-03-adaptive-implementation.md  session-03-project-management.md  session-04-adaptive-implementation.md  session-04-continuous-optimization-cycle.md  session-05-continuous-evolution.md  session-06-precision-research.md  transfer-infrastructure.md
desktop/: claude-desktop-instructions-v2.md  claude-desktop-instructions-v2.md.backup  claude-desktop-instructions-v3.md  claude-desktop-instructions-v4.md
docs/: AUDIT-TACHES-COMPLETES.md  CLAUDE-HANDOFF-GUIDE.md  CLOUDFLARE-13-MCP-SERVERS.md  GIT-MCP-INTEGRATION-GUIDE.md  MISSION.md  NOUVELLES-DECOUVERTES.md  OMAR-PROFILE-COMPLETE.md  PROJECT-CONTEXT-COMPLETE.md  README.md  RESEARCH-PYDANTIC-LOGFIRE-OPENMEMORY.md  ROADMAP-STATUS-COMPLETE.md  STACK-DECISION-ANALYSIS.md  VISION.md  github-mcp-session-prompt.md  mcp-evaluation-complete.md  mcp-integration-mission-order.md
docs/decisions/: mcp-decisions-log.md
relay/: .gitignore  Cargo.toml  LICENSE  README.md
relay/docs/: installation.md
relay/migrations/: 001_initial.sql
relay/relay-cli/: Cargo.toml
relay/relay-cli/src/: main.rs
relay/relay-core/: Cargo.toml
relay/relay-core/src/: agent.rs  daemon.rs  lib.rs  privacy.rs  security.rs  storage.rs
(+10 files in other folders)
