[package]
name = "relay-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
relay-core = { path = "../relay-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# Configuration
directories = "5.0"
toml = "0.8"
